--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,7 @@
 }
 
 :root {
-
-    --bg--coslor: #1f242d;
+    --bg--color: #1f242d;
     --second-bg--color: #323946;
     --text-color: #fff;
     --main-color: #0ef;
