--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 
 :root {
     --bg--color: #1f242d;
-    --second-bg--color: #323946;
+    --second-bg--color: #343a45;
     --text-color: #fff;
     --main-color: #0ef;
 }
@@ -122,6 +122,8 @@ span {
 
 .home-content p {
     font-size: 1.6rem;
+    margin-top: 1rem;
+
 }
 
 .social-media a {
@@ -195,6 +197,99 @@ span {
     margin: 2rem 0 3rem;
 }
 
+.education {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: auto;
+    padding-bottom: 5rem;
+}
+
+.education .education-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+    margin-top: 5rem;
+}
+
+.education-row .education-column {
+    flex: 1 1 40rem;
+}
+
+.education-column .title {
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem 2rem;
+}
+
+.education-column .education-box {
+    border-left: .2rem solid var(--main-color);
+}
+
+.education-box .education-content {
+    position: relative;
+    padding-left: 2rem;
+
+}
+
+.education-box .education-content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -1.1rem;
+    width: 2rem;
+    height: 2rem;
+    background: var(--main-color);
+    border-radius: 50%;
+}
+
+.education-content .content {
+    position: relative;
+    padding: 1.5rem;
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    overflow: hidden;
+}
+
+.education-content .content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--second-bg--color);
+    z-index: -1;
+    transition: .5s;
+}
+
+.education-content .content:hover::before {
+    width: 100%;
+}
+
+
+
+.education-content .content .year {
+    font-size: 1.5rem;
+    color: var(--main-color);
+    padding-bottom: .5rem;
+
+}
+
+.education-content .content .year i {
+    padding-right: .5rem;
+}
+
+.education-content .content h3 {
+    font-size: 2rem;
+}
+
+.education-content .content p {
+    font-size: 1.6rem;
+    padding-top: .5rem;
+}
+
+/* 
 .services h2 {
     margin-bottom: 5rem;
 }
@@ -235,7 +330,7 @@ span {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
-
+*/
 /* General Section Styling */
 .section {
     padding: 70px 0;
@@ -260,7 +355,9 @@ span {
     /* 3 columns layout */
     gap: 20px;
     /* Space between skill items */
-    padding: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 0px;
 }
 
 /* Responsive for smaller screens (below 768px) */
@@ -331,37 +428,49 @@ span {
 .html {
     width: 90%;
     background-color: #e326c7;
+    animation: skill__ani 5s;
     /* HTML bar color */
 }
 
 .css {
     width: 80%;
     background-color: #1c264f;
+    animation: skill__ani 5s;
     /* CSS bar color */
 }
 
 .javascript {
     width: 75%;
     background-color: #f0db4f;
+    animation: skill__ani 5s;
     /* JavaScript bar color */
 }
 
 .flutter {
     width: 75%;
     background-color: #42a5f5;
+    animation: skill__ani 5s;
     /* Flutter bar color */
 }
 
 .python {
     width: 90%;
     background-color: #306998;
+    animation: skill__ani 5s;
     /* Python bar color */
 }
 
 .git {
     width: 60%;
     background-color: #f1502f;
+    animation: skill__ani 5s;
     /* Git bar color */
+}
+
+@keyframes skill__ani {
+    0% {
+        width: 0;
+    }
 }
 
 .portfolio {
